--- a/css/inicio.css
+++ b/css/inicio.css
@@ -561,8 +561,8 @@ footer h1{
       margin: 0;
       position: absolute;
       top: 50px;
-      right: 0;
-      background: #fafafa;
+      right: 10px;
+      background: #ffffff;
       border-radius: 8px;
       width: 200px;
       display: none; 
@@ -665,12 +665,11 @@ footer h1{
       width: 100%; 
       height: auto;
     }
-
-    .grid-item p {
-      font-size: 16px;
-    }
-    .grid-item p {
-      font-size: 18px;
+.teste3{
+  display: none;
+}
+    .grid2 {
+      display: none;
     }
     footer {
       flex-direction: column; 
@@ -706,6 +705,7 @@ footer h1{
     .card-lista {
         grid-template-columns: repeat(3, 1fr);
     }
+
     .menu-hamburguer {
       display: block; 
     }
@@ -755,34 +755,34 @@ footer h1{
       line-height: 1.5;
     }
      .grid {
-      grid-template-columns: repeat(2, 1fr); /* 2 colunas para telas menores */
+      grid-template-columns: repeat(2, 1fr);
     }    .grid {
-      grid-template-columns: 1fr 1fr; /* Duas colunas em telas médias */
+      grid-template-columns: 1fr 1fr; 
     }
 
     .grid-item:nth-child(1) {
-      grid-row: auto; /* Remove o destaque do item 1 */
-      grid-column: span 2; /* Ocupa as duas colunas */
+      grid-row: auto;
+      grid-column: span 2; 
     }
 
     .grid2 {
-      width: 100%; /* Ajusta a largura das imagens */
-      height: 100%; /* Mantém proporção */
+      width: 100%;
+      height: 100%;
     }
 
     .grid1 {
-      width: 100%; /* Ajusta largura da imagem principal */
+      width: 100%; 
       height: auto;
     }
   
   
     .card-lista .card-item .card-link {
-        width: 320px; /* Reduz a largura dos cards */
+        width: 320px;
         padding: 16px;
     }
   
     .card-lista .card-link .item {
-        font-size: 0.9rem; /* Fonte menor */
+        font-size: 0.9rem; 
     }
   }
   
@@ -805,12 +805,12 @@ footer h1{
   }
   @media (max-width: 480px) {
     .categorias {
-      justify-content: center; /* Alinha os itens ao centro em telas muito pequenas */
+      justify-content: center; 
     }
   
     .categorias img {
       width: 100px;
-      height: 100px; /* Reduz ainda mais as imagens em telas muito pequenas */
+      height: 100px;
     }
   }
   @media (max-width: 1024px) {
@@ -868,7 +868,9 @@ footer h1{
   }
   
   @media (max-width: 768px) {
-   
+    .input-icon{
+      display: none;
+    }
     footer {
       flex-direction: column; 
       height: auto; 
@@ -886,10 +888,7 @@ footer h1{
       height: 40px;
     }
   
-    footer button img {
-      width: 20px;
-      height: 20px;
-    }
+
     .texto p {
       font-size: 16px;
     }
@@ -922,6 +921,11 @@ footer h1{
       width: 80px;
       height: 80px;
     }
+      .mapBox {
+    width: 90%; 
+    height: auto; 
+    aspect-ratio: 16 / 9;
+}
   }
   
   @media (max-width: 480px) {
@@ -949,4 +953,9 @@ footer h1{
       width: 60px;
       height: 60px;
     }
+    .mapBox {
+      width: 100%; 
+      height: auto;
+      aspect-ratio: 16 / 9; 
+  }
   }
