--- a/css/sobre.css
+++ b/css/sobre.css
@@ -479,60 +479,61 @@ footer div {
 
 
 .mapBox {
-    position: relative;
-    width: 600px;
-    height: 250px;
-    background: #fff;
-    margin: 90px;
+  position: relative;
+  width: 600px;
+  height: 250px;
+  background: #fff;
+  margin: 20px auto; 
 }
 
 .mapBox iframe {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+  border: none;
 }
 
+
 footer button {
-    position: absolute;
-    top: -30px;
-    left: 50%;
-    transform: translateX(-50%);
-    border: none;
-    background-color: #e7e7e7;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 10;
-    cursor: pointer;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  border: none;
+  background-color: #e7e7e7;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  cursor: pointer;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 footer div {
-    display: grid;
-    justify-items:flex-start;
-    color: #fff;
+  display: grid;
+  justify-items:flex-start;
+  color: #fff;
 }
 
 footer div h1 {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 footer div p,
 footer div a {
-    margin-bottom: 8px;
-    color: white;
-    text-decoration: none;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    
-}
-footer h1{
-  color:#4f5afc;
+  margin-bottom: 8px;
+  color: white;
+  text-decoration: none;
   font-family: Georgia, 'Times New Roman', Times, serif;
+  
 }
 
-
+footer h1{
+color:#4f5afc;
+font-family: Georgia, 'Times New Roman', Times, serif;
+}
 
 
 
@@ -628,10 +629,17 @@ footer h1{
   .texto h1 {
     font-size: 30px;
   }
+  .input-icon{
+    display: none;
+  }
   .menu-hamburguer {
     display: block; 
   }
-
+  .mapBox {
+    width: 90%; 
+    height: auto; 
+    aspect-ratio: 16 / 9;
+}
   .nav-list {
     display: none;
   }
@@ -743,4 +751,9 @@ footer h1{
     width: 60px;
     height: 60px;
   }
+  .mapBox {
+    width: 100%; 
+    height: auto;
+    aspect-ratio: 16 / 9; 
+}
 }
