--- a/css/sobre.css
+++ b/css/sobre.css
@@ -430,6 +430,7 @@ nav li {
 }
 
 footer {
+
   display: flex;
   justify-content: space-around; 
   align-items: center;
@@ -440,29 +441,7 @@ footer {
   padding: 20px 0; 
   box-sizing: border-box;
   position: relative; 
-}
-
-footer div {
-  display: grid;
-  justify-items: center;
-  color: #fff;
-}
-
-  /* FOOTER */
-
-  footer {
-
-    display: flex;
-    justify-content: space-around; 
-    align-items: center;
-    background-color: #000;
-    height: 370px;
-    width: 100vw; 
-    margin: 0; 
-    padding: 20px 0; 
-    box-sizing: border-box;
-    position: relative; 
-    
+  flex-direction: row;
 }
 
 
@@ -471,15 +450,13 @@ footer div {
   width: 600px;
   height: 250px;
   background: #fff;
-  margin: 20px auto; 
+  margin: 90px;
 }
 
 .mapBox iframe {
   width: 100%;
   height: 100%;
-  border: none;
 }
-
 
 footer button {
   position: absolute;
@@ -513,7 +490,7 @@ footer div p,
 footer div a {
   margin-bottom: 8px;
   color: white;
-  text-decoration: none;
+  text-decoration:none;
   font-family: Georgia, 'Times New Roman', Times, serif;
   
 }
@@ -522,6 +499,7 @@ footer h1{
 color:#4f5afc;
 font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
 
 
 
