--- a/css/produtos.css
+++ b/css/produtos.css
@@ -510,12 +510,11 @@ footer h1{
 
 .filtragemtotal a{
   text-decoration: none;
-  gap: 2px;
   font-size: 20px;
-  justify-content: center;
-  margin: 0 auto;
  list-style: none; 
- display: flex;
+display: flex;
+color: black;
+
 }
 .hamburguer span {
   display: block;
@@ -549,9 +548,9 @@ footer h1{
   display: flex;
 }
 .todos{
-  background: white;
-width: 190px;
-height: 190px;
+background: white;
+width: 150px;
+height: 150px;
 border-radius: 50%;
 }
 #filtros {
@@ -560,26 +559,28 @@ border-radius: 50%;
   flex-wrap: wrap;
   gap: 20px;
 }
-.filtragemtotal{
+.filtragemtotal {
   list-style: none;
-  padding: 10px;
-  position: absolute;
-  top: 50%;
-  left: 50%; 
-  transform: translate(-50%, -50%); 
-  width: 200px;
-  display: none;
-  background: #fafafa;
-  border-radius: 10px;
-  width: 500px;
-  height: 400px;
-  display: none; 
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.9);
+  padding: 20px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 500px; /* Largura padrão para desktop */
+  height: 100vh; /* Ocupa toda a altura da tela */
+  background: #ffffff;
+  border-radius: 10px 0 0 10px;
+  box-shadow: -4px 0 6px rgba(0, 0, 0, 0.1);
   overflow-y: auto;
+  display: none; /* Oculto por padrão */
+  flex-direction: column;
+  z-index: 1000;
+  font-family: Arial, sans-serif;
+  transition: transform 0.3s ease; /* Adiciona animação para exibição */
 }
-.filtro {
-  height: 40px;
-}
+
+
+
+
 .navburguer a {
   display: block;
   padding: 10px 15px;
@@ -589,14 +590,13 @@ border-radius: 50%;
   transition: background-color 0.3s ease;
 }
 
-.filter img{
+.filtro{
   width: 150px;
   height: 150px;
   border-radius: 50%;
   object-fit: cover;
   margin: 0 20px;
   margin-bottom: 10px;
-
 }
 
 .filter {
@@ -607,6 +607,14 @@ border-radius: 50%;
 .filter p{
   justify-content: center;
   display: flex;
+}
+.filtraeorganizar{
+  display: flex;
+  gap: 200px;
+  margin-bottom: 40px;
+}
+.filtraeorganizar i{
+font-size: 40px;
 }
 @media (max-width: 1200px) {
   .card-lista {
@@ -634,6 +642,7 @@ border-radius: 50%;
   .card-lista {
     grid-template-columns: repeat(2, 1fr);
   }
+ 
 }
 
 @media (max-width: 900px) {
@@ -676,8 +685,12 @@ border-radius: 50%;
   .input-icon{
     display: none;
   }
+  
+
   .todos{
-    width: 400px;
+    width: 40px;
+    height: 40px;
+    content: url("../img/21009978-filtro-icone-filtrando-simbolo-configuracao-placa-para-movel-aplicativo-e-rede-projeto-gratis-vetor.jpg");
   }
   #filtros {
     justify-content: space-around;
