--- a/css/detalhes.css
+++ b/css/detalhes.css
@@ -234,6 +234,81 @@ nav li {
     display: inline-block; 
     vertical-align: top; 
   }
+  .card-lista {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 40px;
+    justify-items: center; /* Garante que os cards fiquem centralizados */
+  }
+  
+  .card-lista .card-link {
+    width: 100%;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    padding: 18px;
+    border-radius: 12px;
+    background: none;
+    border: 2px solid transparent;
+    transition: 0.2s ease;
+  }
+  
+  .card-lista .card-link .card-imagem {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 50px;
+  }
+  
+  .card-lista .card-link .item {
+    color: #5372f0;
+    padding: 8px 16px;
+    font-size: 0.95rem;
+    font-weight: 500;
+    margin: 16px 0 18px;
+    background: #DDE4FF;
+    width: fit-content;
+    border-radius: 50px;
+  }
+  
+  .card-lista .card-link .card-titulo {
+    font-size: 1.19rem;
+    color: black;
+    font-weight: 600;
+    margin: 0; /* Remover margens para alinhar melhor */
+  }
+  
+  .card-lista .card-link .card-button {
+    border-radius: 50px;
+    margin: 30px 0 5px;
+    border: 2px solid #5372f0;
+    background: none;
+    color: #5372f0;
+    align-items: center;
+    padding: 10px 20px;
+    transition: ease-in-out 0.4s;
+  }
+  
+  .card-lista .card-link:hover .card-button {
+    color: white;
+    background: #5372f0;
+  }
+  
+  .card-lista .card-item {
+    list-style: none;
+  }
+  
+  .card-lista .card-link:hover {
+    border-color: #5372f0;
+  }
+  
+  /* Alinhando o h2 (ou h1) com o link */
+  .card-lista .card-link h2 {
+    margin: 0;
+    text-align: center;
+  }
   
 
   .detalhes-secundarios {
