--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
   padding: 0;
   margin: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
   box-sizing: border-box;
 }
 html, body {
@@ -430,7 +432,7 @@ nav li {
 }
 
 footer {
-
+  
   display: flex;
   justify-content: space-around; 
   align-items: center;
@@ -443,6 +445,19 @@ footer {
   position: relative; 
   flex-direction: row;
 }
+#menu-footer{
+  display: flex;
+  gap: 40px;
+}
+
+#mapadosite-footer{
+  font-size: 15px;
+}
+
+#marcas-footer{
+  font-size: 15px;
+}
+
 
 
 .mapBox {
@@ -501,6 +516,10 @@ font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 
+
+#menu-footer{
+  display: flex;
+}
 
 
 
